GH-47 fix(ihp): set hero z-index

--- a/src/css/pages/case-study-ihp.scss
+++ b/src/css/pages/case-study-ihp.scss
@@ -32,6 +32,7 @@
 
 .hero {
   position: relative;
+  z-index: 2;
 
   img {
     width: 100%;
